# runsight

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  codebones_tree.txt  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rename_config.json  repo-skeleton.md  repo-skeleton.xml  skeleton.xml
apps/api/: .gitignore  pyproject.toml  skeleton.xml
apps/api/.phalanx/souls/: soul-1773123402399.yaml  soul_288f05fa.yaml  soul_38abf352.yaml  soul_482431b2.yaml  soul_5f658474.yaml  soul_612782c9.yaml  soul_976a8c0b.yaml  soul_a19eef62.yaml  soul_e36435a8.yaml
apps/api/.phalanx/steps/: e2e-step-1773256880035.yaml
apps/api/.phalanx/workflows/: c6f91cb2-2610-4602-917d-345c02d96313.yaml
apps/api/src/runsight_api/: alembic.ini  cli.py  main.py
apps/api/tests/: conftest.py  test_alembic_migrations.py  test_blank_canvas_yaml_bug.py  test_cors_config.py  test_execution_log_persistence.py  test_execution_service_return_type.py  test_main.py  test_request_id_access_log.py  test_run134_openapi_codegen.py  test_run203_placeholder_migration_cleanup.py  test_run378_source_branch_filtering.py  test_run516_ci_workspace_layout.py  test_run517_codebones_index_regression.py  test_run519_tracked_artifact_cleanup.py  test_run520_tools_canonical_home.py  test_run691_stale_soul_assertion_refs.py  test_run705_assertions_fire_e2e.py  test_run706_api_e2e.py  test_run707_sse_streaming_e2e.py  test_run739_source_audit.py  test_run740_source_audit.py  test_run832_identity_messages.py  test_run834_identity_verification.py  test_run845_parser_warnings_e2e.py  test_run864_dead_code.py  test_sql_pagination.py  test_stale_run_recovery.py  test_structlog_foundation.py  test_structured_errors.py  test_swallowed_exception_logging.py
apps/api/tests/core/: test_config.py  test_project.py  test_run373_git_init.py  test_run767_missing_git_scaffold.py  test_scaffold_project.py
apps/api/tests/data/: test_base_yaml_repository.py  test_baseline_query.py  test_filesystem.py  test_path_traversal.py  test_provider_repo.py  test_repositories.py  test_run478_run_repo_workflow_health_metrics.py  test_run479_run_repo_list_metrics.py  test_run480_run_repo_delete_cascade.py  test_run603_workflow_interface_validation.py  test_run606_snapshot_validation.py  test_run822_base_yaml_identity.py  test_run822_workflow_repo_identity.py  test_run849_n_plus_one_fix.py  test_soul_repo.py  test_step_repo.py  test_task_repo.py
apps/api/tests/domain/: test_entities.py  test_entity_extra_config.py  test_node_status_enum.py  test_run127_bug_fixes.py  test_run127_create_run_workflow_name.py  test_run329_workflow_commit_sha.py  test_run334_state_transition_guards.py  test_run379_data_model.py  test_run437_soul_schema_alignment.py  test_run472_transport_soul_schema.py  test_run556_workflow_entity_enabled.py  test_run663_entity_fields.py  test_run689_soul_assertions_shim.py  test_run773_api_identity_responses.py  test_run825_provider_entity_identity.py  test_run827_soul_identity_schema.py  test_run_node_eval_fields.py  test_sse_event_constants.py
apps/api/tests/logic/: test_artifact_cleanup_fire_and_forget.py  test_artifact_cleanup_observer.py  test_artifact_store_injection.py  test_budget_run_status.py  test_cost_service.py  test_disabled_provider_policy.py  test_eval_observer.py  test_execution_observer.py  test_execution_observer_soul.py  test_execution_service.py  test_execution_service_concurrency.py  test_execution_service_main_branch_loading.py  test_git_service.py  test_google_api_key_header.py  test_provider_pulse_release_digest_eval_configs.py  test_provider_service.py  test_registry_service.py  test_run135_sim_branches.py  test_run141_execution_service_api_keys.py  test_run180_observer_block_result.py  test_run200_state_flow.py  test_run207_streaming_observer.py  test_run208_double_observer.py  test_run209_cancel_wiring.py  test_run347_wire_assertion_configs.py  test_run374_git_service.py  test_run376_save_commit.py  test_run380_branch_aware_exec.py  test_run404_workflow_id_filter.py  (+19 more)
libs/core/: pyproject.toml  runsight-workflow-schema.json
libs/core/scripts/: generate_schema.py
libs/core/tests/: conftest.py  test_advanced_blocks.py  test_artifact_store_wiring.py  test_async_file_io.py  test_base_block.py  test_baseblock_artifact_helpers.py  test_blocks.py  test_budget_migration_gate_synthesize.py  test_budget_migration_linear_fanout.py  test_budget_migration_remaining.py  test_carry_context_blockresult.py  test_code_block.py  test_codeblock_sandbox_hardening.py  test_condition_engine.py  test_conditional_block.py  test_conversation_histories.py  test_cross_feature_integration.py  test_debate_messagebus_removal.py  test_discovery.py  test_dns_rebinding.py  test_fanout_exit_def.py  test_fanoutblock_stateful.py  test_gate_error_subclass.py  test_gate_file_writer_blocks.py  test_http_request_block.py  test_http_request_schema.py  test_integration_advanced_blocks.py  test_integration_blocks_workflow.py  test_integration_cross_feature_boundaries.py  test_integration_debate_block_type_safety.py  test_integration_e2e_workflow.py  test_integration_kwargs_compatibility.py  test_integration_merge_validation.py  test_integration_runner_primitives.py  test_integration_state_blocks.py  test_integration_workflow_block.py  test_integration_workflow_block_backward_compat.py  test_integration_workflow_block_e2e.py  test_integration_workflow_block_parser.py  test_integration_workflow_block_with_other_blocks.py  (+56 more)
(+1180 files in other folders)
