[project]
name = "runsight-workspace"
version = "0.1.9"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.uv.workspace]
members = ["apps/api", "packages/core"]

[tool.uv.sources]
runsight-core = { workspace = true }
runsight = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "packages/core/tests"]
asyncio_mode = "auto"
addopts = ""
markers = [
    "integration: requires tmux and/or agent CLIs",
    "e2e: full system end-to-end tests",
    "future_backlog: tests for future phases (Phase 1.1+)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"apps/api/tests/test_run134_openapi_codegen.py" = ["F401"]
