[project]
name = "runsight-api"
version = "0.1.0"
description = "Runsight API server — powers the GUI and executes workflows"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.24",
    "alembic>=1.14.0",
    "pyyaml>=6.0",
    "runsight-core",
    "pydantic-settings>=2.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runsight_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/test_run134_openapi_codegen.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
exclude = ["tests/test_run134_openapi_codegen.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
